--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "npx babel src -d dist",
     "prepack": "npm run build",
     "test": "mocha --require @babel/register --recursive"
   },
